# TrackBuilder

./: .gitignore  LICENSE  README.md  pyproject.toml
manuscript/: paper.md
notebook/: apparent fishing efforts as tracks.ipynb  conversion.py  example.ipynb  monthGrouping.ipynb  monthGrouping_v2.ipynb
test/: test_example.py
track_builder/: buffer.py  conversion.py  conversion_v2.py  gfw.py  gfw_api_notebook.ipynb  gfw_notebook.ipynb  main.py  test_example.py  testing.ipynb  use-example.ipynb  visualization.ipynb
